// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedCard renders correctly with title 1`] = `
<View
  className="p-3 rounded-[10px] my-2 border shadow-sm bg-light-lighter dark:bg-border-dark border-light dark:border-white/10"
>
  <Text
    className="text-base font-bold mb-1 text-apptext dark:text-dark"
  >
    Test Card
  </Text>
</View>
`;

exports[`ThemedCard renders correctly with title and subtitle 1`] = `
<View
  className="p-3 rounded-[10px] my-2 border shadow-sm bg-light-lighter dark:bg-border-dark border-light dark:border-white/10"
>
  <Text
    className="text-base font-bold mb-1 text-apptext dark:text-dark"
  >
    Test Card
  </Text>
  <Text
    className="text-sm text-gray-500 dark:text-gray-400"
  >
    Subtitle
  </Text>
</View>
`;
